--- a/index.html
+++ b/index.html
@@ -66,35 +66,35 @@
           <div class="window_main">
             <div id="root">
               <div class="back_button_fake"></div>
-              <a class="abs iconex" ondblclick="showvideos()">
+              <a class="abs iconex" onclick="showvideos()">
                 <img src="assets/images/icons/icon_32_folder.png">
                 Video's
               </a>
-              <a class="abs iconex" ondblclick="showd()" style="left: 80px;">
+              <a class="abs iconex" onclick="showd()" style="left: 80px;">
                 <img src="assets/images/icons/icon_32_folder.png">
                 3D
               </a>
-              <a class="abs iconex" ondblclick="showmotion()" style="left: 155px;">
+              <a class="abs iconex" onclick="showmotion()" style="left: 155px;">
                 <img src="assets/images/icons/icon_32_folder.png">
                 Motion Graphics
               </a>
-              <a class="abs iconex" ondblclick="showgraphic()" style="left: 230px;">
+              <a class="abs iconex" onclick="showgraphic()" style="left: 230px;">
                 <img src="assets/images/icons/icon_32_folder.png">
                 Graphic Design
               </a>
-              <a class="abs iconex" ondblclick="showphoto()" style="left: 305px;">
+              <a class="abs iconex" onclick="showphoto()" style="left: 305px;">
                 <img src="assets/images/icons/icon_32_folder.png">
                 Photography
               </a>
-              <a class="abs iconex" ondblclick="showmusic()" style="left: 380px;">
+              <a class="abs iconex" onclick="showmusic()" style="left: 380px;">
                 <img src="assets/images/icons/icon_32_folder.png">
                 Music
               </a>
-              <a class="abs iconex" ondblclick="showgames()" style="left: 455px;">
+              <a class="abs iconex" onclick="showgames()" style="left: 455px;">
                 <img src="assets/images/icons/icon_32_folder.png">
                 Video Games
               </a>
-              <a class="abs iconex" ondblclick="showfashion()" style="left: 530px;">
+              <a class="abs iconex" onclick="showfashion()" style="left: 530px;">
                 <img src="assets/images/icons/icon_32_folder.png">
                 Fashion
               </a>
