--- a/about.html
+++ b/about.html
@@ -397,7 +397,7 @@
 
                     <section class="user-network">
                         <header>
-                            <h2>Check out one of my projects <3 </h2>
+                            <h2>Check out one of my projects</h2>
                         </header>
                     </section>
 
